Fixed CORS bug, Changed request handling body into a data object